# mslu_ical

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  main.py  passenger_wsgi.py  pyproject.toml
mslu_ical/: __init__.py
src/: main.py  network.py
src/api/: endpoints.py  students.py  teachers.py
src/config/: logging.py  settings.py
src/utils/: constants.py  fake_ua_client.py  key_builder.py  project_version.py  schedules.py
